--- a/index3.html
+++ b/index3.html
@@ -2,19 +2,30 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Hai Dep Dep</title>
+  <title>Love Dep Dep</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <style>
-.ml2 {
+.ml10 {
+  position: relative;
   font-weight: 900;
-  font-size: 3.5em;
+  font-size: 4em;
 }
 
-.ml2 .letter {
+.ml10 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
+}
+
+.ml10 .letter {
   display: inline-block;
   line-height: 1em;
+  transform-origin: 0 0;
 }
 body {
   background-color: #e74c3c;
@@ -26,7 +37,12 @@ body {
       <br><br><br><br>
       <br><br><br><br>
       <br><br><br><br>
-  <h1 class="ml2" style="color: #f5f5f5;">Hai Selamat Siang Dep Dep</h1>
+
+    <h1 class="ml10" style="color: #f5f5f5;">
+        <span class="text-wrapper">
+          <span class="letters">Aku Mau Bilang Sama Kamu</span>
+        </span>
+      </h1>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script></div>
 </center>
@@ -34,29 +50,26 @@ body {
 
 <script>
     function myFunction() {
-      location.replace("index2.html")
+      location.replace("index4.html")
     }
     </script>
 
 <script>
-  var textWrapper = document.querySelector('.ml2');
+ var textWrapper = document.querySelector('.ml10 .letters');
 textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
 
 anime.timeline({loop: false})
   .add({
-    targets: '.ml2 .letter',
-    scale: [4,1],
-    opacity: [0,1],
-    translateZ: 0,
-    easing: "easeOutExpo",
-    duration: 950,
-    delay: (el, i) => 70*i
+    targets: '.ml10 .letter',
+    rotateY: [-90, 0],
+    duration: 1300,
+    delay: (el, i) => 45 * i
   }).add({
-    targets: '.ml2',
+    targets: '.ml10',
     opacity: 0,
     duration: 1000,
     easing: "easeOutExpo",
-    delay: 10000000000
+    delay: 1000000
   });
 </script>
 
