--- a/index5.html
+++ b/index5.html
@@ -2,17 +2,19 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Hai Dep Dep</title>
+  <title>Love Dep Dep</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <style>
-.ml2 {
-  font-weight: 900;
-  font-size: 3.5em;
+.ml15 {
+  font-weight: 800;
+  font-size: 3.8em;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
 }
 
-.ml2 .letter {
+.ml15 .word {
   display: inline-block;
   line-height: 1em;
 }
@@ -26,7 +28,15 @@ body {
       <br><br><br><br>
       <br><br><br><br>
       <br><br><br><br>
-  <h1 class="ml2" style="color: #f5f5f5;">Hai Selamat Siang Dep Dep</h1>
+
+    
+
+     
+
+        <h1 class="ml15" style="color: #f5f5f5;">
+            <span class="word">STAY WITH</span>
+            <span class="word">ME YA DEP</span>
+          </h1>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script></div>
 </center>
@@ -34,29 +44,25 @@ body {
 
 <script>
     function myFunction() {
-      location.replace("index2.html")
+      location.replace("index6.html")
     }
     </script>
 
 <script>
-  var textWrapper = document.querySelector('.ml2');
-textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
-
-anime.timeline({loop: false})
+anime.timeline({loop: true})
   .add({
-    targets: '.ml2 .letter',
-    scale: [4,1],
+    targets: '.ml15 .word',
+    scale: [14,1],
     opacity: [0,1],
-    translateZ: 0,
-    easing: "easeOutExpo",
-    duration: 950,
-    delay: (el, i) => 70*i
+    easing: "easeOutCirc",
+    duration: 800,
+    delay: (el, i) => 800 * i
   }).add({
-    targets: '.ml2',
+    targets: '.ml15',
     opacity: 0,
     duration: 1000,
     easing: "easeOutExpo",
-    delay: 10000000000
+    delay: 10000000
   });
 </script>
 
