--- a/index6.html
+++ b/index6.html
@@ -42,12 +42,12 @@ body {
 <body onclick="myFunction()">
   
   
-  <a href="https://forms.gle/6dSKJqHLzUDfQuuW7"> <button class="button">KLIK DISINI CEPETAN</button></a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQeev_R0Y7nmESM64q8Zj_xDUyfAYv8bPYnbxunHwF5zAZcQ/viewform?usp=sf_link"> <button class="button">KLIK DISINI CEPETAN</button></a>
 </body>
 
 <script>
     function myFunction() {
-      location.replace("https://forms.gle/6dSKJqHLzUDfQuuW7")
+      location.replace("https://docs.google.com/forms/d/e/1FAIpQLSdQeev_R0Y7nmESM64q8Zj_xDUyfAYv8bPYnbxunHwF5zAZcQ/viewform?usp=sf_link")
     }
     </script>
 
