--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Love Dep Dep</title>
+  <title>Love u</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -39,7 +39,7 @@ body {
 
   <h1 class="ml6" style="color: #e74c3c;">
       <span class="text-wrapper">
-        <span class="letters">Jaga Kesehatan Kamu Ya Dep </span>
+        <span class="letters">udah makan belum nih? </span>
       </span>
     </h1>
 
