--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Love Dep depp</title>
+  <title>Love u broo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -36,7 +36,7 @@ body {
       <h1 class="ml4" style="color: #f5f5f5;">
           <span class="letters letters-1">AKU</span>
           <span class="letters letters-2">SAYANG ❤</span>
-          <span class="letters letters-3">KAMU DEP DEP</span>
+          <span class="letters letters-3">KAMU IN EVERY UNIVERSE</span>
         </h1>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script></div>
