--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Hai Dep Dep</title>
+  <title>Hai</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -26,7 +26,7 @@ body {
       <br><br><br><br>
       <br><br><br><br>
       <br><br><br><br>
-  <h1 class="ml2" style="color: #f5f5f5;">Hai Selamat Siang Dep Dep</h1>
+  <h1 class="ml2" style="color: #f5f5f5;">Hai Selamat malam cantik</h1>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script></div>
 </center>
