--- a/index5.html
+++ b/index5.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Love Dep Dep</title>
+  <title>Love u</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -35,7 +35,7 @@ body {
 
         <h1 class="ml15" style="color: #f5f5f5;">
             <span class="word">STAY WITH</span>
-            <span class="word">ME YA DEP</span>
+            <span class="word">ME YA , JAGA DIRI JUGA</span>
           </h1>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script></div>
